codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_multiline_reason.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
assertion_line: 891
expression: "render_overlay_lines(&view, 100)"
---

  Would you like to run the following command?

  Reason: Monitor requested approval for tool call "exec_command": requires approval
  Details:
  arguments:
    {
      "cmd": "ls"
    }

  $ exec_command

› 1. Yes, proceed (y)
  2. No, and tell Codex what to do differently (esc)

  Press enter to confirm or esc to cancel
